--- a/src/HDE.Platform/HDE.Platform.csproj
+++ b/src/HDE.Platform/HDE.Platform.csproj
@@ -1,109 +1,18 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{95E06C5C-A612-4E1A-BF91-693E573DF5C1}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <TargetFramework>net5.0-windows</TargetFramework>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <UseWindowsForms>true</UseWindowsForms>
+    <UseWPF>true</UseWPF>
+
     <RootNamespace>HDE.Platform</RootNamespace>
     <AssemblyName>HDE.Platform</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile>
-    </TargetFrameworkProfile>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;AESCRYPTO</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE;AESCRYPTO</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup>
-    <SignAssembly>true</SignAssembly>
-  </PropertyGroup>
-  <PropertyGroup>
     <AssemblyOriginatorKeyFile>Platform.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="PresentationCore" />
-    <Reference Include="PresentationFramework" />
-    <Reference Include="System" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows" />
-    <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Windows.Input.Manipulations" />
-    <Reference Include="System.Xml" />
-    <Reference Include="WindowsBase" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="AspectOrientedFramework\BaseController.cs" />
-    <Compile Include="AspectOrientedFramework\IBaseView.cs" />
-    <Compile Include="AspectOrientedFramework\Services\IMessagePump.cs" />
-    <Compile Include="AspectOrientedFramework\Services\MessagePump.cs" />
-    <Compile Include="AspectOrientedFramework\Services\MessagePumpArgs.cs" />
-    <Compile Include="AspectOrientedFramework\UIFactory.cs" />
-    <Compile Include="AspectOrientedFramework\View\IToolView.cs" />
-    <Compile Include="AspectOrientedFramework\WinForms\IMainFormView.cs" />
-    <Compile Include="AspectOrientedFramework\WinForms\ITool.cs" />
-    <Compile Include="AspectOrientedFramework\WinForms\ToolBase.cs" />
-    <Compile Include="AspectOrientedFramework\WinForms\ShellBaseController.cs" />
-    <Compile Include="Collections\ReadOnlyDictionary.cs" />
-    <Compile Include="ProcessHelper.cs" />
-    <Compile Include="FileIO\RelativePathDiscovery.cs" />
-    <Compile Include="FileIO\SyncedFiles.cs" />
-    <Compile Include="FileIO\SyncFile.cs" />
-    <Compile Include="HdePlatformVersion.cs" />
-    <Compile Include="Logging\ConsoleLog.cs" />
-    <Compile Include="Logging\HtmlLog.cs" />
-    <Compile Include="Logging\HtmlLogFormatter.cs" />
-    <Compile Include="Logging\ILog.cs" />
-    <Compile Include="Logging\LogBase.cs" />
-    <Compile Include="Logging\LogException.cs" />
-    <Compile Include="Logging\LoggingEvent.cs" />
-    <Compile Include="Logging\QueueLog.cs" />
-    <Compile Include="Logging\SevenZipLogHelper.cs" />
-    <Compile Include="Logging\SimpleFileLog.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Serialization\SerializerHelper.cs" />
-    <Compile Include="Services\ApplicationSingleInstancePerUser.cs" />
-    <Compile Include="Services\SettingsService.cs" />
-    <Compile Include="Wpf\Commands\AsyncCommand.cs" />
-    <Compile Include="Wpf\Commands\AsyncCommandBase.cs" />
-    <Compile Include="Wpf\Commands\DelegateCommand.cs" />
-    <Compile Include="Wpf\Commands\IAsyncCommand.cs" />
-    <Compile Include="Wpf\Commands\ViewModelActionCommand.cs" />
-    <Compile Include="Wpf\Commands\ViewModelCommand.cs" />
-    <Compile Include="Wpf\Converters\NullToVisibilityConverter.cs" />
-    <Compile Include="Wpf\NotifyTaskCompletion.cs" />
-  </ItemGroup>
-  <ItemGroup>
+    <PackageReference Include="Microsoft.Windows.Compatibility" Version="5.0.0" />
     <None Include="Platform.snk" />
   </ItemGroup>
-  <ItemGroup />
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
